k8s/helm/import-products/teste.yaml
---
# Source: import-products/templates/service-db-import-products.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db-import-products
  name: db-import-products
  #namespace: import-products
spec:
  selector:
    app: db-import-products
  ports:
    - name: db-port
      protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None  # Headless service for stable DNS
  # type: ClusterIP
---
# Source: import-products/templates/service-import-products.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: import-products
    helm.sh/chart: import-products-3.0.0
    app.kubernetes.io/name: import-products
    app.kubernetes.io/instance: import-products
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  name: import-products
  #namespace: import-products
spec:
  ports:
  - name: backend-port
    port: 81
    protocol: TCP
    targetPort: 8081  # Backend application (FastAPI)
  - name: frontend-port
    port: 80
    protocol: TCP
    targetPort: 8080  # Frontend application
  selector:
    app: import-products
  type: ClusterIP
---
# Source: import-products/templates/deployment-app-import-products.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    helm.sh/chart: import-products-3.0.0
    app.kubernetes.io/name: import-products
    app.kubernetes.io/instance: import-products
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  name: import-products
  #namespace: import-products ##temp, because later I will implementing ArgoCD
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/match-tag: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: import-products
  template:
    metadata:
      labels:
        app: import-products
    spec:
      containers:
      - image: ghcr.io/vitor-csilva/importacao-produtos-web:latest
        name: import-products
        resources:
          requests:
            cpu: "500m"  #Recursos de CPU
            memory: "512Mi"  #Recursos de memória
          limits:
            cpu: 1  #Recursos de CPU
            memory: 1Gi 
        readinessProbe:
          httpGet:
            path: /api
            port: 8081
        # ports:
        #   - containerPort: 8080
        #   - containerPort: 8081
---
# Source: import-products/templates/deployment-db-import-products.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: db-import-products
  name: db-import-products
  #namespace: import-products
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-import-products
  template:
    metadata:
      labels:
        app: db-import-products
    spec:
      containers:
      - name: db-import-products
        image: postgres:10
        ports:
          - containerPort: 5432
        volumeMounts:
          - name: db-data
            mountPath: /var/lib/postgresql/data
          - name: db-scripts
            mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: db-data
          emptyDir: {}
        - name: db-scripts
          configMap:
            name: product-schema-config  # Reference the ConfigMap
---
# Source: import-products/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: import-products-ingress
  #namespace: import-products
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: import-products.demo.com
    http:
      paths:
      # Frontend - No rewrite
      - path: /
        pathType: Prefix
        backend:
          service:
            name: import-products
            port:
              number: 80

      # Backend API - Rewrite applied in config snippet
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: import-products
            port:
              number: 81
